--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BreakableToyProject</title>
+  <title>Me&u</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= csrf_meta_tags %>
@@ -9,7 +9,7 @@
 <body>
   
   <nav class="top-bar">
-    <h1><a href="/">BreakableToyProject</a></h1>
+    <h1><a href="/">Me&u</a></h1>
 
     <section class="top-bar-section">
       <ul class="right">
