show page not styled

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,16 @@
+.logo {
+  width: 10rem;
+  border-radius: 0.3rem;
+}
+
+.top-bar {
+  background-color: #145973;
+}
+
+body {
+  background: #faf0f1;
+}
+
 .image-box {
   border-style: solid;
   background-color: #427f9c;
