--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
 <body>
   
   <nav class="top-bar">
-    <h1><a href="/">Me&u</a></h1>
-
+    <a href="/" class="logo"><%= image_tag("logo.png", alt: "Me&u") %> </a>
+HI
     <section class="top-bar-section">
       <ul class="right">
         <%- if current_user -%>
