--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -55,7 +55,7 @@ body {
 }
 
 .hero-section {
-  background: url("home-background-image.jpeg") 50% no-repeat;
+  background: url("home-background-image.jpeg") no-repeat center center fixed;
   background-size: cover;
   height: 81vh;
   text-align: center;
