--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -78,6 +78,8 @@ body {
   width: 15rem;
 }
 
+
+
 .hero-section {
   background: url("home-background-image.jpeg") no-repeat center center fixed;
   background-size: cover;
@@ -199,9 +201,9 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  height: 10%;
+  height:11.1%;
   color: white;
 }
 .break-tag {
-  padding-bottom: 4%;
+  margin-bottom: 6rem;
 }
