--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -101,6 +101,9 @@ body {
   text-shadow: 1px 1px 2px #0a0a0a;
 }
 
+.hero-text {
+  font-size: 2rem;
+}
 
 .input-group-rounded .input-group-field {
   border-radius: 5000px 0 0 5000px;
@@ -112,7 +115,6 @@ body {
   border-radius: 0 5000px 5000px 0;
   font-size: 1rem;
 }
-
 
 .linkedin {
   font-size: 2rem;
