--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,7 +73,7 @@
               <i class="fa fa-rocket" aria-hidden="true"></i>
             </div>
             <div class="back">
-              <p>Launch Academy</p>
+              <p>Launch</p>
             </div>
           </div>
         </a>
