--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -40,6 +40,10 @@ body {
   background-color: #457B9D;
 }
 
+.button.secondary:hover{
+  background-color: #6aa4c7;
+}
+
 .image-box {
   border-style: solid;
   background-color: #427f9c;
@@ -244,4 +248,96 @@ body {
 }
 .break-tag {
   margin-bottom: 6rem;
+}
+
+/* Sign in */
+.center{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  background: #457B9D;
+  border-radius: 10px;
+}
+
+.center h1{
+  text-align: center;
+  padding: 0 0 20px 0;
+  border-bottom: 1px solid silver;
+  color: #1D3557;
+}
+
+.center form {
+  padding: 0 40px;
+  box-sizing: border-box;
+  font-size: 20px;
+
+}
+form .field{
+  position: relative;
+  border-bottom: 2px solid #adadad;
+  margin: 20px 0;
+}
+
+input[type="submit"]{
+  border-radius: 5000px;
+  padding: 0.285em 0.8em;
+  border: 1px solid #1779ba;
+
+}
+
+.actions{
+  padding-bottom: 1rem;
+}
+
+.field label{
+  font-size: 1.2rem;
+}
+
+.devise_link{
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  top: 81%;
+  left: 0;
+  right: 0;
+  text-align: center;
+  font-size: 20px;
+  display: inline-block;
+}
+
+.devise_link a {
+  color: #118fe3;
+  text-decoration: none;
+}
+
+.devise_link a:hover{
+  text-decoration: underline;
+}
+
+.devise_links{
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  top: 72%;
+  left: 0;
+  right: 0;
+  text-align: center;
+  font-size: 20px;
+  display: inline-block;
+}
+
+.devise_separator{
+  display: inline-block;
+  margin-left: 6rem;
+}
+
+.devise_links a {
+  color: #118fe3;
+  text-decoration: none;
+}
+
+.devise_links a:hover{
+  text-decoration: underline;
 }
