--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,9 @@
-<h2>Sign up</h2>
+  <%= render "devise/shared/error_messages", resource: resource %>
+  
+<div class="center">
+<h1>Sign up</h1>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -30,5 +32,7 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
+</div>
+<div class="devise_link">
 <%= render "devise/shared/links" %>
+</div>
