--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -307,15 +307,6 @@ input[type="submit"]{
   display: inline-block;
 }
 
-.devise_link a {
-  color: #118fe3;
-  text-decoration: none;
-}
-
-.devise_link a:hover{
-  text-decoration: underline;
-}
-
 .devise_links{
   position: absolute;
   margin-left: auto;
@@ -330,14 +321,22 @@ input[type="submit"]{
 
 .devise_separator{
   display: inline-block;
-  margin-left: 6rem;
+  margin-left: 2rem;
+  margin-top: 1rem;
 }
 
-.devise_links a {
-  color: #118fe3;
-  text-decoration: none;
-}
 
-.devise_links a:hover{
-  text-decoration: underline;
+.devise_links_forgot{
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  top: 66%;
+  left: 0;
+  right: 0;
+  text-align: center;
+  font-size: 20px;
+  display: inline-block;
+}
+.forgot_separation{
+  margin-bottom: .7rem;
 }
