--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <%= csrf_meta_tags %>
   <%= favicon_link_tag asset_path('favicon.ico') %>
   <script src="https://kit.fontawesome.com/c9611dadad.js" crossorigin="anonymous"></script>
+  <link href='https://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet'>
 </head>
 <body>
   <nav class="top-bar">
