--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -3,9 +3,11 @@
   <%= button_to "Log in", new_session_path(resource_name), :method => :get %>
 <% end %>
 </div>
+<div class="login_separation">
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <%= button_to "Sign up", new_registration_path(resource_name), :method => :get %>
 <% end %>
+</div>
 <div class="devise_separator">
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <%= button_to "Forgot your password?", new_password_path(resource_name), :method => :get %>
