--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -444,12 +444,12 @@ form .button_to{
   box-shadow: 1px 1px 2px #0a0a0a;
 }
 
-.menu-text p, img, h4{
-  color: #ffffff;
-  margin-left: 2rem;
-  margin-top: 2rem;
-  margin-right: 2rem;
-}
+// .menu-text, p, img, h4{
+//   color: #ffffff;
+//   margin-left: 2rem;
+//   margin-top: 2rem;
+//   margin-right: 2rem;
+// }
 
 .menu-text img{
   border-radius: 2rem;
