--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,6 +3,10 @@
   border-radius: 0.3rem;
 }
 
+.logo:hover{
+  transform: scale(1.2);
+}
+
 .top-bar {
   background-color: #457B9D;
   position: fixed; 
@@ -85,6 +89,16 @@ body {
   background: linear-gradient(to right, #121FCF 0%, #CF4FA4 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 0 auto; 
+  letter-spacing: .1em; 
+  animation: 
+    typing 2.5s steps(40, end),
+}
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
 }
 
 .input-group-rounded .input-group-field {
